<resources>
    <string name="app_name">Chauffeur Driver</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_earnings_text">Earnings</string>
    <string name="bottom_ratings_text">Ratings</string>
    <string name="bottom_settings_txt">Settings</string>
    <string name="google_maps_API_key">AIzaSyDp8lCPGhGE5uhyqlUWZhS0t_uQajW5yhg</string>
    <string name="google_maps_API">AIzaSyBvfzFgDQZQjThxa3MgCUczuKTreOWsAkk</string>
    <string name="title">C H A U F F E U R</string>
    <string name="ok">OK</string>
    <string name="existingemail">The email address you entered is already in use. Please use a different email address.</string>
    <string name="malformedemail">You have entered an icorrect email please edit the email address before trying to register again.</string>
    <string name="weakpass">The password you entered is very weak please enter a stronger password before trying to register again.</string>
    <string name="title_activity_driver_tracking">Map</string>
    <string name="title_activity_ride_tracking">Map</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_login">Already have an account ? Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account ? Register</string>
    <string name="forgot_password_reset">Forgot password? Reset</string>
    <string name="login">Login</string>
    <string name="forgot_pwd">FORGOT PASSWORD</string>
    <string name="please_enter_email">Please enter your email address</string>
    <string name="please_fill_all">Please fill all the required fields</string>
    <string name="reset">RESET</string>
    <string name="cancel">CANCEL</string>
    <string name="logging_in">Getting things ready...</string>
    <string name="resetting_pwd">Resetting password...</string>
    <string name="reset_link">Reset password link has been sent to your email</string>
    <string name="register">Register</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Full Name</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="earnings">EARNINGS</string>
    <string name="trip_history">TRIP HISTORY</string>
    <string name="settings">SETTINGS</string>
    <string name="help">HELP</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="security">Security</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="changing_pwd">Changing password...</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="failed_to_authenticate">Failed to authenticate</string>
    <string name="failed_to_update_pwd">Failed to update password</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="national_id">National ID</string>
    <string name="profile_pic_text">A good profile picture is important, pick out your best pic</string>
    <string name="upload_from_gallery">UPLOAD FROM GALLERY</string>
    <string name="car_info">The car image can only be uploaded through the web portal.</string>
    <string name="info_header">There\'s something you should know</string>
    <string name="error_header">Whoa! there\'s an error</string>
    <string name="update_name">UPDATE NAME</string>
    <string name="please_enter_name">Please enter a name</string>
    <string name="update">UPDATE</string>
    <string name="updating_details">Updating your details</string>
    <string name="update_id">UPDATE ID</string>
    <string name="please_enter_id">Please enter an ID</string>
    <string name="update_phone">UPDATE PHONE</string>
    <string name="please_enter_phone">Please enter a phone number</string>
    <string name="update_profile_pic">UPDATE PROFILE PIC</string>
    <string name="please_select_profile">Please select a suitable profile picture</string>
    <string name="uploading">Uploading...</string>
    <string name="select_pic">Select a picture:</string>
    <string name="image_upload_success">Image uploaded successfully</string>
    <string name="rider_name">Rider Name</string>
    <string name="eta">ETA</string>
    <string name="distance">Distance</string>
    <string name="address">Address</string>
    <string name="start_ride">Start Ride</string>
</resources>
