<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_earnings"
            android:icon="@drawable/outline_earnings"
            android:title="@string/earnings" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/outline_history"
            android:title="@string/trip_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/outline_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/outline_help"
            android:title="@string/help" />
    </group>

    <item android:title="@string/security">
        <menu>
            <item
                android:id="@+id/nav_changepwd"
                android:icon="@drawable/outline_security"
                android:title="@string/change_password" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/outline_logout"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
